# TIM_DashBoard

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  ILI9341_lcd.ioc  LICENSE  README.md
Core/: lv_conf.h
Core/Inc/: LVGL_Interface.h  ili9341.h  ili9341_gfx.h  main.h  stm32f4xx_it.h
Core/Src/: LVGL_Interface.c  dma.c  gpio.c  ili9341_gfx.c  main.c  spi.c  stm32f4xx_it.c
documentation/: dev_manual.md  readme.md  sequence_diagrams.md
documentation/ICD/: ICD_readme.md  interface_control_document_template.odt
documentation/pinion_diagram/: pinion.css  spec.json  yaml_carte_volant_v21.yml
documentation/pinion_diagram/scripts/: pinion_gen_diagram.sh  pinion_gen_template.sh
documentation/user_manual/: TIM_DashBoard_user_manual.md
hardware/Diagram_Pinion/: TIM_DB.yml  pinion.js  spec.json  tim_dashboard.yml
hardware/KiCad/: Carte_Volant_v21-cache.lib  Carte_Volant_v21-rescue.lib  Carte_Volant_v21.kicad_pcb  Carte_Volant_v21.kicad_pcb-bak  Carte_Volant_v21.net  Carte_Volant_v21.pro  Carte_Volant_v21.sch  Carte_Volant_v21.sch-bak  Carte_Volant_v21.xml  _autosave-Carte_Volant_v21.kicad_pcb  fp-info-cache  fp-lib-table  sym-lib-table
hardware/doc/: appnote.md  bom.md
hardware/meca/3D_Model/: 436500300.stp  855135013.stp
software/: .cproject  .mxproject  .project  STM32F103RBTX_FLASH.ld  TIM_DashBoard Debug.cfg  TIM_DashBoard Debug.launch  TIM_DashBoard.ioc
software/Core/Inc/: controller.h  dma.h  main.h  model.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h  user_can.h  user_motor_control.h  view.h
software/Core/Src/: can.c  controller.c  gpio.c  main.c  model.c  stm32f1xx_it.c  tim.c  user_can_functs.c  wiper.c
software/Debug/: TIM_DashBoard.elf  TIM_DashBoard.list  TIM_DashBoard.map  makefile  objects.list
software/Debug/Core/Src/: adc.su  can.d  can.su  gpio.d  main.d  main.su  model.su  stm32f1xx_hal_msp.d  stm32f1xx_it.d  stm32f1xx_it.su  subdir.mk  system_stm32f1xx.d  tim.d  tim.su  user_can_functs.d  user_can_functs.su  wiper.d  wiper.su
software/Debug/Core/Startup/: subdir.mk
software/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.d  stm32f1xx_hal_adc.d  stm32f1xx_hal_can.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.d  subdir.mk
software/TIM_DashBoard/: .mxproject  TIM_DashBoard.txt
software/TIM_DashBoard/Core/Inc/: controller.h  model.h  stm32f1xx_it.h  user_can_functs.h  wiper.h
software/TIM_DashBoard/Core/Src/: adc.c  can.c  controller.c  dma.c  gpio.c  main.c  model.c  user_can_functs.c
software/TIM_DashBoard/Debug/: TIM_DashBoard.elf  TIM_DashBoard.list  TIM_DashBoard.map
software/TIM_DashBoard/Debug/Core/Src/: adc.d  adc.su  can.d  dma.d  gpio.d  main.su  model.d  model.su  tim.su  user_can_functs.su  wiper.d
software/TIM_DashBoard/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.d  stm32f1xx_hal_adc_ex.d  stm32f1xx_hal_can.su  stm32f1xx_hal_exti.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d
software/lvgl/lvgl_f103/: .cproject  .mxproject  .project  lvgl_f103 Debug.launch  lvgl_f103.ioc
software/lvgl/lvgl_f103/Core/: lv_conf.h
software/lvgl/lvgl_f103/Core/Inc/: LVGL_Interface.h  Testboard_ui.h  controller.h  ili9341.h  ili9341_font.h  ili9341_gfx.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  user_can.h  user_motor_control.h  view.h  wiper.h
software/lvgl/lvgl_f103/Core/Src/: LVGL_Interface.c  TL.c  Testboard_ui.c  adc.c  can.c  circle.c  circle90.c  controller.c  dma.c  f_speed_2.c  font_cmd.c  gpio.c  ili9341.c  ili9341_font.c  ili9341_gfx.c  light.c  main.c  model.c  spi.c  sport.c  stm32f1xx_it.c  tim.c  user_can_functs.c  view.c  wiper.c
software/lvgl/lvgl_f103/Core/Src/ILI9341/: font.pl
software/lvgl/lvgl_f103/Core/lvgl/: lvgl.h
software/lvgl/lvgl_f103/Core/lvgl/.github/workflows/: build_micropython.yml  ccpp.yml  check_conf.yml  check_style.yml  close_old_issues.yml
software/lvgl/lvgl_f103/Core/lvgl/src/: lv_conf_internal.h
software/lvgl/lvgl_f103/Core/lvgl/src/core/: lv_disp.h  lv_indev.c  lv_obj.c  lv_obj_draw.c  lv_refr.c
software/lvgl/lvgl_f103/Core/lvgl/src/draw/: lv_draw.h  lv_draw_img.c
software/lvgl/lvgl_f103/Core/lvgl/src/misc/: lv_fs.c  lv_fs.h
software/lvgl/lvgl_f103/Core/lvgl/src/widgets/: lv_btnmatrix.c  lv_canvas.c
software/lvgl/lvgl_f103/Debug/: lvgl_f103.elf  lvgl_f103.list  lvgl_f103.map  objects.list
software/lvgl/lvgl_f103/Debug/Core/Src/: LVGL_Interface.d  LVGL_Interface.su  TL.d  Testboard_ui.d  Testboard_ui.su  adc.d  can.d  can.su  dma.d  f_speed_2.d  gpio.d  ili9341.d  ili9341.su  ili9341_font.su  ili9341_gfx.d  ili9341_gfx.su  light.d  main.d  main.su  model.d  model.su  spi.d  spi.su  sport.d  stm32f1xx_hal_msp.d  stm32f1xx_it.d  stm32f1xx_it.su  subdir.mk  system_stm32f1xx.d  tim.d  user_can_functs.d  wiper.d  wiper.su
software/lvgl/lvgl_f103/Debug/Core/Startup/: subdir.mk
software/lvgl/lvgl_f103/Debug/Core/lvgl/rt-thread/: subdir.mk
software/lvgl/lvgl_f103/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.d  stm32f1xx_hal_adc.d  stm32f1xx_hal_adc_ex.d  stm32f1xx_hal_can.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_spi.d  stm32f1xx_hal_tim.d  (+2 more)
software/lvgl/lvgl_f103/Release/: lvgl_f103.elf  lvgl_f103.list  lvgl_f103.map  makefile  objects.list  sources.mk
software/lvgl/lvgl_f103/Release/Core/Src/: LVGL_Interface.d  LVGL_Interface.su  TL.d  Testboard_ui.d  Testboard_ui.su  dma.d  f_speed_2.d  gpio.d  gpio.su  ili9341.d  ili9341.su  ili9341_gfx.d  ili9341_gfx.su  light.d  main.d  main.su  spi.d  spi.su  sport.d  stm32f1xx_hal_msp.d  stm32f1xx_hal_msp.su  stm32f1xx_it.d  stm32f1xx_it.su  subdir.mk  system_stm32f1xx.d
software/lvgl/lvgl_f103/Release/Core/Startup/: subdir.mk
(+467 files in other folders)
